--- a/src/pages/LoginPage/style.css
+++ b/src/pages/LoginPage/style.css
@@ -3,6 +3,7 @@ section {
   flex-direction: column;
   justify-content: center;
   align-items: center;
+  height: 100vh;
 }
 
 form {
@@ -17,7 +18,6 @@ form {
   width: 200px;
   height: 200px;
   border-radius: 50px;
-  margin: 30px 0 5px 0;
 }
 
 h2 {
